# glassdoor_review_analyzer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: review_analyser_examples.ipynb  simple_review_examples.ipynb
src/: review_analyser.py  review_analysis.ipynb  simple_review.py
tests/: review_analyzer_test.py  simple_review_test.py
