[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glassdoor_review_analyzer"
version = "1.0.0"
authors = [
    {name = "Adam Berbash"},
    {name = "Destiny Louangsombath"},
    {name = "Hajun Huh"},
    {name = "Nour Tamam"}
]
description = "A Python library for analyzing Glassdoor job reviews using PySpark"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyspark>=3.4.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "kagglehub>=0.2.0",
    "pyyaml>=6.0"
]

[project.urls]
Source = "https://github.com/yourteam/glassdoor_review_analyzer"